--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -289,10 +289,12 @@
    ],
    "source": [
     "#测试函数\n",
-    "querys = ['hello']\n",
-    "input_data = 'you say goodbye and i say hello.'\n",
-    "window_size = 1\n",
-    "query_and_show(querys,window_size,input_data=input_data)"
+    "if __name__ == '__main__':\n",
+    "\n",
+    "    querys = ['hello']\n",
+    "    input_data = 'you say goodbye and i say hello.'\n",
+    "    window_size = 1\n",
+    "    query_and_show(querys,window_size,input_data=input_data)"
    ]
   },
   {
@@ -312,22 +314,22 @@
    ],
    "source": [
     "#生成训练数据\n",
+    "if __name__ == '__main__':\n",
+    "    import sys\n",
+    "    import os\n",
+    "    sys.path.append('..')\n",
+    "    import pickle\n",
     "\n",
-    "import sys\n",
-    "import os\n",
-    "sys.path.append('..')\n",
-    "import pickle\n",
+    "    dataset_dir = os.path.abspath('')\n",
+    "    vocab_path = dataset_dir + '\\\\ptb' + '\\\\ptb.vocab.pkl'\n",
+    "    save_path = dataset_dir + '\\\\ptb' + '\\\\ptb.train.npy'\n",
     "\n",
-    "dataset_dir = os.path.abspath('')\n",
-    "vocab_path = dataset_dir + '\\\\ptb' + '\\\\ptb.vocab.pkl'\n",
-    "save_path = dataset_dir + '\\\\ptb' + '\\\\ptb.train.npy'\n",
+    "    print(vocab_path)\n",
+    "    print(save_path)\n",
     "\n",
-    "print(vocab_path)\n",
-    "print(save_path)\n",
-    "\n",
-    "with open(vocab_path, 'rb') as f:\n",
-    "    tmp_word_to_id, tmp_id_to_word = pickle.load(f)\n",
-    "    tmp_corpus = np.load(save_path)"
+    "    with open(vocab_path, 'rb') as f:\n",
+    "        tmp_word_to_id, tmp_id_to_word = pickle.load(f)\n",
+    "        tmp_corpus = np.load(save_path)"
    ]
   },
   {
@@ -391,13 +393,15 @@
     }
    ],
    "source": [
-    "querys = ['you','year','car','toyota']\n",
-    "window_size = 2\n",
-    "corpus={}\n",
-    "corpus['corpus'] = tmp_corpus\n",
-    "corpus['word_to_id'] = tmp_word_to_id\n",
-    "corpus['id_to_word'] = tmp_id_to_word\n",
-    "query_and_show(querys,window_size,corpus=corpus)"
+    "if __name__ == '__main__':\n",
+    "\n",
+    "    querys = ['you','year','car','toyota']\n",
+    "    window_size = 2\n",
+    "    corpus={}\n",
+    "    corpus['corpus'] = tmp_corpus\n",
+    "    corpus['word_to_id'] = tmp_word_to_id\n",
+    "    corpus['id_to_word'] = tmp_id_to_word\n",
+    "    query_and_show(querys,window_size,corpus=corpus)"
    ]
   }
  ],
@@ -417,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
