--- a/pytorch(3)-torchvision下的图片数据增强处理.ipynb
+++ b/pytorch(3)-torchvision下的图片数据增强处理.ipynb
@@ -18,118 +18,131 @@
    "id": "90cbd114",
    "metadata": {},
    "source": [
-    "```python\n",
+    "#### 容器操作：\n",
     "\n",
-    "'''容器操作'''\n",
-    "transforms.Compose(list) #容器：创建容器。将多个transform组合在一起，只接受一个list参数\n",
-    "transforms.RandomApply()  #容器：随机运用。选取一系列transform动作里的一部分进行随机运用\n",
-    "transforms.RandomChoice()  #容器：随机选择。从包含多种transform的list中随机选择一个transform\n",
-    "transforms.RandomOrder()  #容器：打乱调整顺序。打乱一系列transform的顺序\n",
+    "###### transforms.Compose(list) \n",
+    "创建容器。将多个transform组合在一起，只接受一个list参数\n",
+    "###### transforms.RandomApply()  \n",
+    "随机运用。选取一系列transform动作里的一部分进行随机运用\n",
+    "###### transforms.RandomChoice()\n",
+    "随机选择。从包含多种transform的list中随机选择一个transform\n",
+    "###### transforms.RandomOrder()  \n",
+    "打乱调整顺序。打乱一系列transform的顺序\n",
+    "\n",
+    "#### 格式转换（主要是Tensor，ndarry,PIL之间）：\n",
+    "###### transforms.ConvertImageDtype() \n",
+    "tensor图片转换成其他tensor格式\n",
+    "###### transforms.PILToTensor()  \n",
+    "将一个PIL图片对象转换成一个Tensor图片对象\n",
+    "###### transforms.ToPILImage()  \n",
+    "生成PIL图片。将一个ndarry或者Tensor对象转换成一个PIL图片\n",
+    "###### transforms.ToTensor()  \n",
+    "生成Tensor对象。将一个ndarry或者PIL对象转换成一个Tensor\n",
     "\n",
     "\n",
-    "'''格式转换（主要是Tensor，ndarry,PIL之间）'''\n",
-    "transforms.ConvertImageDtype() #格式转换。tensor图片转换成其他tensor格式\n",
-    "transforms.PILToTensor()  #格式转换：将一个PIL图片对象转换成一个Tensor图片对象\n",
-    "transforms.ToPILImage()  #格式转换：生成PIL图片。将一个ndarry或者Tensor对象转换成一个PIL图片\n",
-    "transforms.ToTensor()  #格式转换：生成Tensor对象。将一个ndarry或者PIL对象转换成一个Tensor\n",
+    "#### 图片内容调整（尺寸不变）：\n",
     "\n",
-    "\n",
-    "'''图片内容调整（尺寸不变）'''\n",
-    "#图片调整：各通道正则化。对Tensor图片按照给定的均值和标准差进行正则化，均值和标准差可以是序列，对应每一个通道\n",
+    "###### transforms.Normalize(mean (sequence),std (sequence))  \n",
+    "各通道正则化。对Tensor图片按照给定的均值和标准差进行正则化，均值和标准差可以是序列，对应每一个通道\n",
     "#仅限Tensor\n",
-    "transforms.Normalize(mean (sequence),std (sequence))  \n",
     "\n",
-    "#图片调整：随机方形区域擦除。随机擦除照片的一块方形区域，不支持PIL对象，只支持Tensor照片\n",
+    "###### transforms.RandomErasing()  \n",
+    "随机方形区域擦除。随机擦除照片的一块方形区域，不支持PIL对象，只支持Tensor照片\n",
     "#仅限Tensor\n",
-    "transforms.RandomErasing()  \n",
     "\n",
-    "#图片调整：随机修改图片亮度、对比度、饱和度、色调。随机改变图片的亮度、对比度、饱和度、色调。当每个位置只传入一个值而不是一个范围时，如transforms.ColorJitter(0.3, 0.3, 0.2)，表示transforms.ColorJitter([1-0.3,1+0.3],[1-0.3,1+0.3], [1-0.2,1+0.2],0)\n",
-    "transforms.ColorJitter(brightness=0, contrast=0, saturation=0, hue=0) \n",
+    "###### transforms.ColorJitter(brightness=0, contrast=0, saturation=0, hue=0) \n",
+    "随机修改图片亮度、对比度、饱和度、色调。随机改变图片的亮度、对比度、饱和度、色调。当每个位置只传入一个值而不是一个范围时，如transforms.ColorJitter(0.3, 0.3, 0.2)，表示transforms.ColorJitter([1-0.3,1+0.3],[1-0.3,1+0.3], [1-0.2,1+0.2],0)\n",
     "\n",
-    "#图片调整：调整图片清晰度。根据给定的sigma范围随机选取sigma值，接合核大小进行高斯模糊\n",
-    "transforms.GaussianBlur(kernel_size, sigma=(0.1, 2.0)) \n",
+    "###### transforms.GaussianBlur(kernel_size, sigma=(0.1, 2.0)) \n",
+    "调整图片清晰度。根据给定的sigma范围随机选取sigma值，接合核大小进行高斯模糊\n",
     "\n",
-    "#图片调整：返回灰度图片。参数如果是1返回的灰度图片只有1个通道，如果参数是3灰度图片则包含3个通道\n",
-    "transforms.Grayscale(num_output_channels=1/3)  \n",
+    "###### transforms.Grayscale(num_output_channels=1/3)  \n",
+    "返回灰度图片。参数如果是1返回的灰度图片只有1个通道，如果参数是3灰度图片则包含3个通道\n",
     "\n",
-    "#图片调整：随机锐化。根据sharpness_factor的值对照片进行锐化，参数为0时是完全模糊，1是原图，2是锐化两倍\n",
-    "transforms.RandomAdjustSharpness(sharpness_factor, p=0.5)  \n",
+    "###### transforms.RandomAdjustSharpness(sharpness_factor, p=0.5)  \n",
+    "随机锐化。根据sharpness_factor的值对照片进行锐化，参数为0时是完全模糊，1是原图，2是锐化两倍\n",
     "\n",
-    "#图片调整：随机对比度。根据给定的概率，随机的对部分照片进行自动对比度调整\n",
-    "transforms.RandomAutocontrast()  \n",
+    "###### transforms.RandomAutocontrast()  \n",
+    "随机对比度。根据给定的概率，随机的对部分照片进行自动对比度调整\n",
     "\n",
-    "#图片调整：随机均衡直方图。随机均衡照片的直方图\n",
-    "transforms.RandomEqualize()  \n",
+    "###### transforms.RandomEqualize()  \n",
+    "随机均衡直方图。随机均衡照片的直方图\n",
     "\n",
-    "#图片调整：随机灰度。根据概率分布，将选中的图片变成灰度图片\n",
-    "transforms.RandomGrayscale()  \n",
+    "###### transforms.RandomGrayscale()  \n",
+    "随机灰度。根据概率分布，将选中的图片变成灰度图片\n",
     "\n",
-    "#图片调整：随机水平镜像。根据概率分布，将选中的图片进行水平翻转\n",
-    "transforms.RandomHorizontalFlip()  \n",
+    "###### transforms.RandomHorizontalFlip()  \n",
+    "随机水平镜像。根据概率分布，将选中的图片进行水平翻转\n",
     "\n",
-    "#图片调整：随机颜色翻转。根据概率分布，将选中的图片颜色进行翻转\n",
-    "transforms.RandomInvert()  \n",
+    "###### transforms.RandomInvert()  \n",
+    "随机颜色翻转。根据概率分布，将选中的图片颜色进行翻转\n",
     "\n",
-    "#图片调整：随机进行透视。根据概率分布，对选中的图片进行透视变换\n",
-    "transforms.RandomPerspective() \n",
+    "###### transforms.RandomPerspective() \n",
+    "随机进行透视。根据概率分布，对选中的图片进行透视变换\n",
     "\n",
-    "#图片调整：随机修改图片位数。根据概率分布，将通道的位数重新指定为0-8之间的一个数值，二进制中8通道代表0-255\n",
-    "transforms.RandomPosterize()  \n",
+    "###### transforms.RandomPosterize()  \n",
+    "随机修改图片位数。根据概率分布，将通道的位数重新指定为0-8之间的一个数值，二进制中8通道代表0-255\n",
     "\n",
-    "#图片处理：随机过曝处理。根据给定的概率，对选定的图片中所有超过给定阈值的像素点进行反转\n",
-    "transforms.RandomSolarize()  \n",
+    "###### transforms.RandomSolarize()  \n",
+    "随机过曝处理。根据给定的概率，对选定的图片中所有超过给定阈值的像素点进行反转\n",
     "\n",
-    "#图片处理：随机垂直翻转。根据给定的概率，进行垂直翻转\n",
-    "transforms.RandomVerticalFlip()  \n",
-    "\n",
-    "\n",
-    "'''图片变形（尺寸发生变化）'''\n",
-    "#图片变形：填充像素。padding\n",
-    "transforms.Pad()  \n",
-    "\n",
-    "#图片变形：随机裁剪固定尺寸输出。进行随机裁剪后，按照输出尺寸输出图片\n",
-    "transforms.RandomResizedCrop()\n",
-    "\n",
-    "#图片变形：随机角度旋转。按照给定的角度范围对图片进行随机旋转，如果只给定一个值value，则按照[-value,+value]做为随机角度的取值范围\n",
-    "transforms.RandomRotation()  \n",
-    "\n",
-    "#图片变形：调整图片大小。\n",
-    "transforms.Resize()  \n",
-    "\n",
-    "#图片变形：从中心裁剪。以图片中心为基准点按照给定的尺寸裁剪\n",
-    "transforms.CenterCrop(size) \n",
-    "\n",
-    "#图片变形：随机位置裁剪。根据给定的尺寸，在随机的位置对照片进行裁剪\n",
-    "transforms.RandomCrop()  \n",
+    "###### transforms.RandomVerticalFlip()  \n",
+    "随机垂直翻转。根据给定的概率，进行垂直翻转\n",
     "\n",
     "\n",
-    "'''增加图片'''\n",
-    "transforms.FiveCrop() #图片增加：返回5张图片。从四角和中心裁剪，根据给定的尺寸，分别从四个角和中心对图片进行裁剪，返回5张图片\n",
-    "transforms.TenCrop()  #增加图片：返回10个局部图片。从四个角和中心分别裁剪出5个，然后对这5个图像进行水平翻转（默认）复制出另外5个。\n",
+    "#### 图片变形（尺寸发生变化）：\n",
+    "##### transforms.Pad()  \n",
+    "填充像素。padding\n",
+    "\n",
+    "##### transforms.RandomResizedCrop()\n",
+    "随机裁剪固定尺寸输出。进行随机裁剪后，按照输出尺寸输出图片\n",
+    "\n",
+    "##### transforms.RandomRotation()  \n",
+    "随机角度旋转。按照给定的角度范围对图片进行随机旋转，如果只给定一个值value，则按照[-value,+value]做为随机角度的取值范围\n",
+    "\n",
+    "##### transforms.Resize()  \n",
+    "调整图片大小。\n",
+    "\n",
+    "##### transforms.CenterCrop(size) \n",
+    "从中心裁剪。以图片中心为基准点按照给定的尺寸裁剪\n",
+    "\n",
+    "##### transforms.RandomCrop()  \n",
+    "随机位置裁剪。根据给定的尺寸，在随机的位置对照片进行裁剪\n",
     "\n",
     "\n",
-    "'''论文方法实现'''\n",
-    "transforms.TrivialAugmentWide() #论文方法实现：TrivialAugmentWide\n",
-    "transforms.AutoAugment()  #论文方法实现：AutoAugmen\n",
-    "transforms.RandAugment()  #论文方法实现：RandAugment\n",
+    "#### 增加图片：\n",
+    "##### transforms.FiveCrop() \n",
+    "返回5张图片。从四角和中心裁剪，根据给定的尺寸，分别从四个角和中心对图片进行裁剪，返回5张图片\n",
+    "##### transforms.TenCrop()  \n",
+    "返回10个局部图片。从四个角和中心分别裁剪出5个，然后对这5个图像进行水平翻转（默认）复制出另外5个。\n",
     "\n",
     "\n",
-    "'''待研究'''\n",
-    "transforms.autoaugment()\n",
-    "transforms.AutoAugmentPolicy()\n",
-    "transforms.functional()\n",
-    "transforms.functional_pil()\n",
-    "transforms.functional_tensor()\n",
-    "transforms.Lambda()  #自定义变化方式\n",
-    "transforms.InterpolationMode()  \n",
-    "transforms.LinearTransformation()  #对Tensor图片进行线性转换\n",
-    "transforms.RandomAffine()\n",
-    "transforms.transforms()\n",
+    "#### 论文方法实现：\n",
+    "##### transforms.TrivialAugmentWide() \n",
+    "论文方法实现：TrivialAugmentWide\n",
+    "##### transforms.AutoAugment()  \n",
+    "论文方法实现：AutoAugmen\n",
+    "##### transforms.RandAugment()  \n",
+    "论文方法实现：RandAugment\n",
     "\n",
     "\n",
-    "'''官方不推荐'''\n",
-    "transforms.RandomSizedCrop()  #官方推荐用transforms.RandomResizedCrop()，不推荐用这个\n",
-    "transforms.Scale()  #官方推荐用transforms.Resize()，不推荐用这个\n"
+    "#### 待研究：\n",
+    "##### transforms.autoaugment()\n",
+    "##### transforms.AutoAugmentPolicy()\n",
+    "##### transforms.functional()\n",
+    "##### transforms.functional_pil()\n",
+    "##### transforms.functional_tensor()\n",
+    "##### transforms.Lambda()  #自定义变化方式\n",
+    "##### transforms.InterpolationMode()  \n",
+    "##### transforms.LinearTransformation()  #对Tensor图片进行线性转换\n",
+    "##### transforms.RandomAffine()\n",
+    "##### transforms.transforms()\n",
+    "\n",
+    "#### 官方不推荐：\n",
+    "##### transforms.RandomSizedCrop()  \n",
+    "官方推荐用transforms.RandomResizedCrop()，不推荐用这个\n",
+    "##### transforms.Scale()  \n",
+    "官方推荐用transforms.Resize()，不推荐用这个"
    ]
   },
   {
