--- a/pytorch(3)-torchvision下的图片数据增强处理.ipynb
+++ b/pytorch(3)-torchvision下的图片数据增强处理.ipynb
@@ -43,12 +43,10 @@
     "#### 图片内容调整（尺寸不变）：\n",
     "\n",
     "###### transforms.Normalize(mean (sequence),std (sequence))  \n",
-    "各通道正则化。对Tensor图片按照给定的均值和标准差进行正则化，均值和标准差可以是序列，对应每一个通道\n",
-    "#仅限Tensor\n",
+    "各通道正则化。对Tensor图片按照给定的均值和标准差进行正则化，均值和标准差可以是序列，对应每一个通道。仅限Tensor\n",
     "\n",
     "###### transforms.RandomErasing()  \n",
-    "随机方形区域擦除。随机擦除照片的一块方形区域，不支持PIL对象，只支持Tensor照片\n",
-    "#仅限Tensor\n",
+    "随机方形区域擦除。随机擦除照片的一块方形区域，不支持PIL对象，只支持Tensor照片。仅限Tensor\n",
     "\n",
     "###### transforms.ColorJitter(brightness=0, contrast=0, saturation=0, hue=0) \n",
     "随机修改图片亮度、对比度、饱和度、色调。随机改变图片的亮度、对比度、饱和度、色调。当每个位置只传入一个值而不是一个范围时，如transforms.ColorJitter(0.3, 0.3, 0.2)，表示transforms.ColorJitter([1-0.3,1+0.3],[1-0.3,1+0.3], [1-0.2,1+0.2],0)\n",
