--- a/pytorch(2)-数据集制作和读取批数据.ipynb
+++ b/pytorch(2)-数据集制作和读取批数据.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "source": [
     "#### 为什么需要通过继承Dataset类来生成数据集？\n",
-    "#### 主要原因是可以实现自定义读取数据集，如通过重写\\__init__()，可以实现直接给类传入链接而不是Tensor就生成数据集，相当于把一些数据的前期处理过程代码直接写到类里，方便以后直接调用。"
+    "#### 主要原因是可以实现自定义读取数据集，如通过重写__init__()，可以实现直接给类传入链接而不是Tensor就生成数据集，相当于把一些数据的前期处理过程代码直接写到类里，方便以后直接调用。"
    ]
   },
   {
@@ -68,11 +68,11 @@
    "source": [
     "Dataset是一个抽象类，抽象类的定义是：必须要对这个类进行继承和重写部分功能之后才能使用。   \n",
     "    \n",
-    "根据注释，需要重写的包含两个功能，一个是通过索引和切片返回数据的功能\\__getitem__()，即当对实例使用索引和切片时将调用的功能，假如实例是x，x[i]或者x[i:j]都将执行\\__getitem__()的具体内容，\\__getitem__(self, index)包含一个需要传入的参数，这个参数可以是索引的编号，也可以是切片，如x[2]或x[2:4]的形式都可以。\n",
+    "根据注释，需要重写的包含两个功能，一个是通过索引和切片返回数据的功能__getitem__()，即当对实例使用索引和切片时将调用的功能，假如实例是x，x[i]或者x[i:j]都将执行\\__getitem__()的具体内容，\\__getitem__(self, index)包含一个需要传入的参数，这个参数可以是索引的编号，也可以是切片，如x[2]或x[2:4]的形式都可以。\n",
     "     \n",
-    "另一个需要重写的功能是\\__len__(self)，即对实例调用.len()方法时执行\\__len__(self)里的具体内容，返回数据集的长度。\n",
+    "另一个需要重写的功能是__len__(self)，即对实例调用.len()方法时执行__len__(self)里的具体内容，返回数据集的长度。\n",
     "     \n",
-    "最后，一般还需要自己重写\\__init__()方法\n",
+    "最后，一般还需要自己重写__init__()方法\n",
     "    \n",
     "示例如下："
    ]
